--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "mongoose": "^4.4.12",
+    "mongoose": "*",
     "morgan": "~1.6.1",
+    "jade": "*",
+    "pug": "^2.0.0-rc.4",
+    "pug-loader": "^2.3.0",
     "serve-favicon": "~2.3.0"
   }
 }
